Architecture redesign, in the middle of progress